syntax = "proto3";

option go_package = "amusing-x.com/charon/charonservice";

package charonservice;

import "charon/proto/category_info.proto";

message CategoryCreateRequest {
  string name = 1;
  string desc = 2;
}

message CategoryCreateResponse {
  bool succeed = 1;
  int64 id = 2;
  string name = 3;
  string desc = 4;
}

message CategoryRequest {
  int64 id = 1;
}

message CategoryResponse {
  bool result = 1;
  Category category = 2;
}