syntax = "proto3";

option go_package = "amusing-x.com/charon/charonservice";

package charonservice;

message CategoryDeleteRequest {
  int64 id = 1;
}

message CategoryDeleteResponse {
  bool succeed = 1;
}